--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-  <title>test-client</title>
+  <title>Wordhub client test</title>
 
   <link rel="shortcut icon"
       href="/images/favicon.ico">
